--- a/frontend/my-app/src/index.css
+++ b/frontend/my-app/src/index.css
@@ -138,3 +138,22 @@
   background: rgba(255, 255, 255, 0.6);
   filter: blur(750px);
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
